<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:text="@string/panjang"
        android:textSize="25sp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_panjang"
        android:hint="@string/_0"
        android:inputType="numberDecimal"
        android:layout_marginBottom="5dp"
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:textSize="25sp"
        android:layout_height="wrap_content"
        android:text="@string/lebar"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_lebar"
        android:hint="@string/_0"
        android:inputType="numberDecimal"
        android:layout_marginBottom="5dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/l_persegi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/luas_persegi" />

    <Button
        android:id="@+id/k_persegi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/keliling_persegi" />

    <Button
        android:id="@+id/l_segitiga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/luas_segitiga" />

    <Button
        android:id="@+id/k_segitiga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/keliling_segitiga" />

    <Button
        android:id="@+id/l_lingkaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/luas_lingkaran" />

    <Button
        android:id="@+id/k_lingkaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/keliling_lingkaran" />

    <TextView
        android:id="@+id/txt_luas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:text="@string/hasil"
        android:textSize="25sp"
        android:textStyle="bold" />

</LinearLayout>